5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4173/executions/1807_2569.log
== SUBMITION (2019-06-12 02:02:31) 
-- CODE:
from numpy import*

x= array(eval(input())

d=0

m=sum(x)/size(x)

for g in x:
	d += (g - m)**2
	w = d / (size(x)-1)
	q = sqrt(w)
	
	
print(round(q,3))
-- EXECUTION TIME:
0.639158
-- ERROR:
  File "/home/codebench/codes/1807/2569/main.py", line 5
    d=0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 02:02:53) 
-- CODE:
from numpy import*

x= array(eval(input())

d=0

m=sum(x)/size(x)

for g in x:
	d += (g - m)**2
	w = d / (size(x)-1)
	q = sqrt(w)
	
	
print(round(q,3))
-- ERROR:
File "XXXX", line 5
    d=0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 02:03:06) 
-- CODE:
from numpy import*

x = array(eval(input())

d = 0

m=sum(x)/size(x)

for g in x:
	d += (g - m)**2
	w = d / (size(x)-1)
	q = sqrt(w)
	
	
print(round(q,3))
-- ERROR:
File "XXXX", line 5
    d = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 02:03:24) 
-- CODE:
from numpy import*
x = array(eval(input())
l = 0
m=sum(x)/size(x)

for g in x:
	d += (g - m)**2
	w = 0 / (size(x)-1)
	q = sqrt(w)
	
	
print(round(q,3))
-- ERROR:
File "XXXX", line 3
    l = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 02:04:00) 
-- CODE:
from numpy import*
x = array(eval(input())
l = 0
m=sum(x)/size(x)

for g in range(size(x)):
	d += (g - m)**2
	w = 0 / (size(x)-1)
	q = sqrt(w)
	
	
print(round(q,3))
-- ERROR:
File "XXXX", line 3
    l = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 02:04:21) 
-- CODE:
from numpy import*
x = array(eval(input()))
l = 0
m = sum(x)/size(x)

for g in range(size(x)):
	d += (g - m)**2
	w = 0 / (size(x)-1)
	q = sqrt(w)
	
	
print(round(q,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 02:04:44) 
-- CODE:
from numpy import*
x = array(eval(input()))
l = 0
m = sum(x)/size(x)

for g in (x):
	d += (g - m)**2
	w = 0 / (size(x)-1)
	q = sqrt(w)
	
	
print(round(q,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 02:04:49) 
-- CODE:
from numpy import*
x = array(eval(input()))
l = 0
m = sum(x)/size(x)

for g in x:
	d += (g - m)**2
	w = 0 / (size(x)-1)
	q = sqrt(w)
	
	
print(round(q,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 02:05:15) 
-- CODE:
from numpy import*
x = array(eval(input()))
g = 0
m = sum(x)/size(x)

for g in x:
	d += (g-m)**2
	w = 0 / (size(x)-1)
	q = sqrt(w)
	
	
print(round(q,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 02:05:20) 
-- CODE:
from numpy import*
x = array(eval(input()))
g = 0
m = sum(x)/size(x)

for g in x:
	d += (g-m)**2
	w = 0 / (size(x)-1)
	q = sqrt(w)
	
	
print(round(q,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 02:05:41) 
-- CODE:
from numpy import*
x = array(eval(input()))
g = 0
m = sum(x)/size(x)
d = 0
for g in x:
	d += (g-m)**2
	w = 0 / (size(x)-1)
	q = sqrt(w)
	
print(round(q,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 02:06:04) 
-- CODE:
from numpy import*
x = array(eval(input()))

m = sum(x)/size(x)
d = 0
for g in x:
	d += (g-m)**2
	w = 0 / (size(x)-1)
	q = sqrt(w)
	
print(round(q,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 02:06:14) 
-- CODE:
from numpy import*
x = array(eval(input()))
m = sum(x)/size(x)
d = 0
for g in x:
	d += (g-m)**2
	w = 0 / (size(x)-1)
	q = sqrt(w)
	
print(round(q,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 02:06:44) 
-- CODE:
from numpy import*
x = array(eval(input()))
m = sum(x)/size(x)
d = 0
for g in x:
	d += (g-m)**2
	w = d / (size(x)-1)
	q = sqrt(w)
	
print(round(q,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 02:07:11) 
-- CODE:
from numpy import*
x = array(eval(input()))
m = sum(x)/size(x)
d = 0
for g in range(size(x)):
	d += (g-m)**2
	w = d / (size(x)-1)
	q = sqrt(w)
	
print(round(q,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 02:07:20) 
-- CODE:
from numpy import*
x = array(eval(input()))
m = sum(x)/size(x)
d = 0
for g in range(size(x)):
	d += (g-m)**2
	w = d / (size(x)-1)
	q = sqrt(w)
	
print(round(q,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 02:07:40) 
-- CODE:
from numpy import*
x = array(eval(input()))
m = sum(x)/size(x)
d = 0
for g in x:
	d += (g-m)**2
	w = d / (size(x)-1)
	q = sqrt(w)
	
print(round(q,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 02:09:35) 
-- CODE:
from numpy import*
x = array(eval(input()))
m = sum(x)/size(x)
d = 0
for g in x:
	d += (g-m)**2
	w = d/(size(x)-1)
	q = sqrt(w)
	
print(round(q,3))
-- EXECUTION TIME:
1.29288
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
108.498
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
21.526
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.29
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
